[tool]
[tool.poetry]
name = "pysignalr"
version = "0.2.0"
description = "Modern, reliable and async-ready client for SignalR protocol"
keywords = ["signalr", "asp", "client", "asyncio", "json", "messagepack", "websockets"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Typing :: Typed",
]
repository = "https://github.com/baking-bad/pysignalr"
homepage = "https://github.com/baking-bad/pysignalr"
authors = [
    "Lev Gorodetskii <pysignalr@drsr.io>",
    "mandrewcito <anbaalo@gmail.com>",
]
maintainers = [
    "Lev Gorodetskii <pysignalr@drsr.io>",
]
readme = "README.md"

packages = [
    { include = "pysignalr", from = "src" },
]

[tool.poetry.dependencies]
python = ">=3.8,<4"
websockets = "^12.0"
aiohttp = "^3.7.4"
msgpack = "^1.0.2"
orjson = "^3.9.0"

[tool.poetry.dev-dependencies]
black = "*"
diff-cover = "*"
docker = "*"
ruff = "*"
mypy = "*"
pytest = "*"
pytest-asyncio = "*"
pytest-cov = "*"

[tool.black]
line-length = 120
target-version = ["py38", "py39", "py310", "py311", "py312"]
skip-string-normalization = true

[tool.ruff]
line-length = 120
ignore = [
    "E402",  # module level import not at top of file
    "E501",  # line too long
    "TCH001", # breaks our runtime Pydantic magic
]
target-version = "py38"
extend-select = ["B", "C4", "FA", "G", "I", "PTH", "Q", "RUF", "TCH", "UP"]
flake8-quotes = { inline-quotes = "single", multiline-quotes = "double" }
isort = { force-single-line = true, known-first-party = ["pysignalr"] }

[tool.mypy]
python_version = "3.8"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
log_cli_level = "WARNING"

[tool.coverage.report]
precision = 2
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
    "if TYPE_CHECKING:",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
