[project]
name = "pysignalr"
version = "1.3.0"
description = "Modern, reliable and async-ready client for SignalR protocol"
readme = "README.md"
requires-python = ">=3.10,<4"
keywords = ["signalr", "asp", "client", "asyncio", "json", "messagepack", "websockets"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Typing :: Typed",
]
authors = [
    { name = "Lev Gorodetskii", email = "github@drsr.io" },
    { name = "mandrewcito", email = "anbaalo@gmail.com" },
    { name = "Caio Barbieri", email = "caio@lombello.com" },
]
maintainers = [
    { name = "Lev Gorodetskii", email = "github@drsr.io" },
]
dependencies = [
    "websockets>=16.0,<17",
    "aiohttp",
    "msgpack",
    "orjson",
]

[dependency-groups]
dev = [
    "black",
    "diff-cover",
    "docker",
    "ruff",
    "mypy",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "types-requests",
]

[project.urls]
Repository = "https://github.com/baking-bad/pysignalr"
Homepage = "https://github.com/baking-bad/pysignalr"


[tool.black]
line-length = 120
target-version = ["py310", "py311", "py312", "py313", "py314"]
skip-string-normalization = true

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
extend-select = ["B", "C4", "FA", "G", "I", "PTH", "Q", "RUF", "TCH", "UP"]
flake8-quotes = { inline-quotes = "single", multiline-quotes = "double" }
isort = { force-single-line = true, known-first-party = ["pysignalr"] }

[tool.mypy]
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)s] %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

[tool.coverage.report]
precision = 2
exclude_lines = [
    "pragma: no cover",
    "def __repr__",

    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
    "if TYPE_CHECKING:",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build" 